compiling_error.txt
D:\Data_Structres_sem3\circular.c: In function 'delete_end':
D:\Data_Structres_sem3\circular.c:101:10: error: 'start' undeclared (first use in this function)
       if(start==NULL){
          ^~~~~
D:\Data_Structres_sem3\circular.c:101:10: note: each undeclared identifier is reported only once for each function it appears in
D:\Data_Structres_sem3\circular.c: In function 'delete_pos':
D:\Data_Structres_sem3\circular.c:120:10: error: 'start' undeclared (first use in this function)
       if(start==NULL){
          ^~~~~
D:\Data_Structres_sem3\circular.c: In function 'display':
D:\Data_Structres_sem3\circular.c:149:15: error: 'start' undeclared (first use in this function)
       currptr=start;
               ^~~~~
